--- a/src/app/components/model/searchClassificationModal.html
+++ b/src/app/components/model/searchClassificationModal.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
   <h4 class="modal-title">
     <a><i ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
-    <span translate>Select information domain</span>
+    <span translate>Select domain</span>
   </h4>
 </div>
 
