--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -8,8 +8,8 @@
     </button>
 
     <div uib-dropdown-menu class="dropdown-menu-right" aria-labelledby="model_creation_button">
-      <button id="add_library_button" class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>Add library</button>
-      <button id="add_profile_button" class="dropdown-item" ng-click="$ctrl.addProfile()" translate>Add profile</button>
+      <button id="add_library_button" class="dropdown-item" ng-click="$ctrl.addLibrary()" translate>ADD_LIBRARY_BUTTON_TEXT</button>
+      <button id="add_profile_button" class="dropdown-item" ng-click="$ctrl.addProfile()" translate>ADD_PROFILE_BUTTON_TEXT</button>
     </div>
   </div>
 
