YTI-1132 Change term "property" to current property type name in property view.
Property types are "attribute" and "association".
Also add English info texts to class attribute/association label and class attribute/association localname.

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -294,3 +294,5 @@
 <div translate>ExchangeFormat</div>
 <div translate>InformationDescription</div>
 <div translate>Use context</div>
+<div translate>Delete attribute</div>
+<div translate>Delete association</div>
