--- a/src/app/components/editor/propertyView.html
+++ b/src/app/components/editor/propertyView.html
@@ -9,17 +9,17 @@
                 ng-disabled="!$ctrl.property.inUnstableState"
                 ng-click="$ctrl.removeProperty($ctrl.property)">
           <i class="fas fa-trash-alt"></i>
-          <span translate>Delete property</span>
+          <span>{{'Delete ' + $ctrl.property.normalizedPredicateType | translate}}</span>
         </button>
     </div>
   </div>
 
-  <h4 translate>Property information</h4>
+  <h4>{{$ctrl.propertyInformationLabel | translate}}</h4>
 
   <div class="row">
 
     <div class="col-md-6">
-      <editable data-title="Class property label" context="$ctrl.model">
+      <editable data-title="Class {{$ctrl.property.normalizedPredicateType}} label" context="$ctrl.model">
         <input id="{{$ctrl.property.internalId + 'label'}}" class="form-control" type="text" restrict-duplicates="$ctrl.otherPropertyLabels" localized-input="label" context="$ctrl.model" ng-model="$ctrl.property.label" />
       </editable>
 
@@ -64,7 +64,7 @@
   <div class="row">
     <div class="col-md-6">
 
-      <editable data-title="Class property id" context="$ctrl.model">
+      <editable data-title="Class {{$ctrl.property.normalizedPredicateType}} id" context="$ctrl.model">
         <input id="{{$ctrl.property.internalId + 'id'}}" class="form-control" type="text" restrict-duplicates="$ctrl.otherPropertyIdentifiers" string-input="identifier" ng-trim="false" ng-model="$ctrl.property.externalId" />
       </editable>
 
