--- a/src/app/translations/titles.html
+++ b/src/app/translations/titles.html
@@ -8,6 +8,8 @@
 <div translate>Association id</div><div translate>Association id info</div>
 <div translate>Property id</div><div translate>Property id info</div>
 <div translate>Class property id</div><div translate>Class property id info</div>
+<div translate>Class attribute id</div><div translate>Class attribute id info</div>
+<div translate>Class association id</div><div translate>Class association id info</div>
 <div translate>Concept id</div><div translate>Concept id info</div>
 <div translate>Vocabulary id</div><div translate>Vocabulary id info</div>
 <div translate>Reference data URI</div><div translate>Reference data URI info</div>
@@ -21,6 +23,8 @@
 <div translate>Attribute label</div><div translate>Attribute label info</div>
 <div translate>Property label</div><div translate>Property label info</div>
 <div translate>Class property label</div><div translate>Class property label info</div>
+<div translate>Class attribute label</div><div translate>Class attribute label info</div>
+<div translate>Class association label</div><div translate>Class association label info</div>
 <div translate>Concept label</div><div translate>Concept label info</div>
 <div translate>Concept suggestion label</div><div translate>Concept suggestion label info</div>
 <div translate>Concept definition</div><div translate>Concept definition info</div>
