YTI-1126 Add status filter dropdown to frontpage

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -73,6 +73,11 @@
                                 class="pull-left ml-2"
                                 [options]="$ctrl.modelTypes"
                                 [filter-subject]="$ctrl.modelType$"></app-filter-dropdown>
+
+            <app-filter-dropdown id="model_status_filter_dropdown"
+                                class="pull-left ml-2"
+                                [options]="$ctrl.statuses"
+                                [filter-subject]="$ctrl.status$"></app-filter-dropdown>
           </div>
         </div>
 
