Add Finnish localization for word "Search"

--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -296,3 +296,4 @@
 <div translate>Use context</div>
 <div translate>Delete attribute</div>
 <div translate>Delete association</div>
+<div translate>Search</div>
