YTI-712 Add ID to start help link

--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -15,7 +15,7 @@
         style="padding: 9px"
         uib-tooltip="{{'Start help' | translate}}"
         tooltip-placement="left">
-      <a ng-click="$ctrl.startHelp()">
+      <a id="start_help_link" ng-click="$ctrl.startHelp()">
         <i class="fas fa-info-circle" style="font-size: x-large"></i>
       </a>
     </li>
