YTI-546 Add search class table view modal as a commented feature
It is commented because it is not complete yet. Current search class modal is still in use, but now developers can test a new modal locally by uncommenting it and commenting the current modal.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -244,6 +244,10 @@ visualization-view ajax-loading-indicator {
   }
 }
 
+.modal-xl {
+  max-width: 95%;
+}
+
 .search-results {
   .no-search-results {
     padding: 15px;
