--- a/src/app/components/common/export.html
+++ b/src/app/components/common/export.html
@@ -1,8 +1,9 @@
 <style>
   #show_accordion_button, #download_accordion_button {
     background-color: #eee;
+    background: white;
     cursor: pointer;
-    padding: 18px;
+    padding: 8px 18px 8px 18px;
     width: 100%;
     border: none;
     text-align: left;
@@ -14,12 +15,16 @@
   #download_accordion_panel, #show_accordion_panel {
     padding: 0 18px;
     display: none;
-    /*background-color: white;*/
+    background-color: white !important;
     overflow: hidden;
   }
 
+  #show_accordion_panel > a, #download_accordion_panel > a {
+    padding: 1px 18px 1px 18px; !important;
+  }
+
   #download_accordion_panel, #show_accordion_panel:hover {
-    background-color: #ccc;
+    background: white;
   }
 
 </style>
@@ -49,8 +54,7 @@
 
 </script>
 
-<button class="accordion button-toggle dropdown-toggle" id="show_accordion_button">{{'Show' | translate |
-  uppercase}}<span class="caret"></span></button>
+<button class="accordion button-toggle dropdown-toggle" id="show_accordion_button">{{'Show' | translate}}<span class="caret"></span></button>
 <div class="panel" id="show_accordion_panel">
   <a ng-repeat="download in $ctrl.downloads track by download.name"
      class="dropdown-item"
@@ -60,8 +64,7 @@
     {{download.name | translate}}
   </a>
 </div>
-<button class="accordion button-toggle dropdown-toggle" id="download_accordion_button">{{'Download' | translate |
-  uppercase}}<span class="caret"></span></button>
+<button class="accordion button-toggle dropdown-toggle" id="download_accordion_button">{{'Download' | translate}}<span class="caret"></span></button>
 <div class="panel" id="download_accordion_panel">
   <a ng-repeat="download in $ctrl.downloads track by download.name"
      class="dropdown-item"
