--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -24,10 +24,18 @@
                           content-extractors="$ctrl.contentExtractors"></content-filter>
         </div>
 
-        <!-- Tähän tietoalue- ja tyyppifiltterit -->
+        <!-- Tähän tyyppifiltteri -->
+
+        <select id="class_information_domain_filter_dropdown"
+                class="form-control pull-left ml-2"
+                style="width: auto"
+                ng-model="$ctrl.showInfoDomain"
+                ng-options="(infoDomain.label | translateValue: $ctrl.model) for infoDomain in $ctrl.infoDomains">
+          <option value="" translate>All information domains</option>
+        </select>
 
         <select id="class_status_filter_dropdown"
-                class="form-control pull-left"
+                class="form-control pull-left ml-2"
                 style="width: auto"
                 ng-model="$ctrl.showStatus"
                 ng-options="(status | translate) for status in $ctrl.statuses">
@@ -93,7 +101,16 @@
                   </div>                  
                 </td>
                 <td>
-                  <highlight text="searchResult.definedBy.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
+                  <div>
+                    <highlight text="searchResult.definedBy.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
+                  </div>
+                  <div>
+                    <span class="information-domains">
+                      <span class="badge badge-light" ng-repeat="infoDomain in searchResult.definedBy.classifications">
+                          {{$ctrl.showItemValue(infoDomain.label)}}
+                      </span>
+                    </span>  
+                  </div>
                 </td>
                 <td>
                   <highlight text="searchResult.comment" context="$ctrl.model" search="$ctrl.searchText"></highlight>
