--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -297,3 +297,4 @@
 <div translate>Delete attribute</div>
 <div translate>Delete association</div>
 <div translate>Search</div>
+<div translate>standard</div>
