--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -99,6 +99,7 @@
 
                 <td>
                   <div>
+                    <ajax-loading-indicator-small ng-if="$ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
                     <highlight text="searchResult.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
                   </div>
                   <a ng-href="{{$ctrl.model.linkToResource(searchResult.id)}}" target="_blank" ng-bind-html="searchResult.id.compact | highlight: $ctrl.searchText"></a>
@@ -153,14 +154,14 @@
       {{$ctrl.textForSelection($ctrl.selection) | translate}}
     </button>
 
-    <!-- <button id="create_class_button"
+    <button id="create_class_button"
             type="button"
             class="btn btn-secondary-action"
-            ng-click="$ctrl.close()"
-            ng-show="$ctrl.canAddNewShape()"> 
+            ng-click="$ctrl.createNewClass()"
+            ng-show="$ctrl.canAddNew()"> 
       + <span translate>New class</span>
     </button>
-
+    <!-- 
     <button id="create_shape_button"
         type="button"
         class="btn btn-secondary-action"
