--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -73,73 +73,78 @@
 
     <div class="row full-height">
 
-        <div class="col-md-12">
+      <div class="col-md-12">
 
-          <ajax-loading-indicator ng-if="$ctrl.loadingResults"></ajax-loading-indicator>
+        <div class="content-box">
 
-          <table class="table table-borderless result-table" width="100%">
-            <thead>
-            <tr>
-              <th style="width: 20%" translate>Name</th>
-              <th style="width: 20%" translate>Model</th>
-              <th style="width: 45%" translate>Description</th>
-              <!-- <th style="width: 20%" translate>Super class</th> YLÄLUOKKAA EI VIELÄ TOTEUTETA, KOSKA SITÄ TIETOA EI OLE OLEMASSA VIELÄ. -->
-              <th style="width: 10%" translate>Modified at</th>
-              <th style="width: 5%"></th>
-            </tr>
-            </thead>
-            <tbody class="search-results">
+          <div class="search-results">
 
-              <tr ng-repeat="searchResult in $ctrl.searchResults"
-                  id="{{$ctrl.generateSearchResultID(searchResult)}}"
-                  ng-class="['search-result', {active: $ctrl.isSelected(searchResult), disabled: $ctrl.isDisabled(searchResult)} ]"
-                  ng-click="$ctrl.selectItem(searchResult)"
-                  key-control-selection>
+            <ajax-loading-indicator ng-if="$ctrl.loadingResults"></ajax-loading-indicator>
 
-                <td>
-                  <div>
-                    <ajax-loading-indicator-small ng-if="$ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
-                    <highlight text="searchResult.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
-                  </div>
-                  <a ng-href="{{$ctrl.model.linkToResource(searchResult.id)}}" target="_blank" ng-bind-html="searchResult.id.compact | highlight: $ctrl.searchText"></a>
-                  <div style="padding-top: 5px">
-                    <app-status [status]="searchResult.status"></app-status>
-                  </div>                  
-                </td>
-                <td>
-                  <div>
-                    <highlight text="searchResult.definedBy.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
-                  </div>
-                  <div ng-if="searchResult.definedBy.normalizedType">
-                    {{searchResult.definedBy.normalizedType | translate}}
-                  </div>
-                  <div>
-                    <span class="information-domains">
-                      <span class="badge badge-light" ng-repeat="infoDomain in searchResult.definedBy.classifications">
-                          {{$ctrl.showItemValue(infoDomain.label)}}
-                      </span>
-                    </span>  
-                  </div>
-                </td>
-                <td>
-                  <highlight text="searchResult.comment" context="$ctrl.model" search="$ctrl.searchText"></highlight>
-                </td>
-                <!-- <td>
-                  {{searchResult.}}
-                </td> -->
-                <td>
-                  {{$ctrl.showItemValue(searchResult.modifiedAt)}}
-                </td>
-                <td>
-
-                </td>
+            <table ng-if="!$ctrl.loadingResults" class="table" width="100%">
+              <thead>
               <tr>
+                <th style="width: 20%" translate>Name</th>
+                <th style="width: 20%" translate>Model</th>
+                <th style="width: 45%" translate>Description</th>
+                <!-- <th style="width: 20%" translate>Super class</th> YLÄLUOKKAA EI VIELÄ TOTEUTETA, KOSKA SITÄ TIETOA EI OLE OLEMASSA VIELÄ. -->
+                <th style="width: 10%" translate>Modified at</th>
+                <th style="width: 5%"></th>
+              </tr>
+              </thead>
+              <tbody>
 
-            </tbody>
-          </table>
+                <tr ng-repeat="searchResult in $ctrl.searchResults"
+                    id="{{$ctrl.generateSearchResultID(searchResult)}}"
+                    ng-class="['search-result', {active: $ctrl.isSelected(searchResult), disabled: $ctrl.isDisabled(searchResult)} ]"
+                    ng-click="$ctrl.selectItem(searchResult)"
+                    key-control-selection>
 
+                  <td>
+                    <div>
+                      <ajax-loading-indicator-small ng-if="$ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
+                      <highlight text="searchResult.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
+                    </div>
+                    <a ng-href="{{$ctrl.model.linkToResource(searchResult.id)}}" target="_blank" ng-bind-html="searchResult.id.compact | highlight: $ctrl.searchText"></a>
+                    <div style="padding-top: 5px">
+                      <app-status [status]="searchResult.status"></app-status>
+                    </div>                  
+                  </td>
+                  <td>
+                    <div>
+                      <highlight text="searchResult.definedBy.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
+                    </div>
+                    <div ng-if="searchResult.definedBy.normalizedType">
+                      {{searchResult.definedBy.normalizedType | translate}}
+                    </div>
+                    <div>
+                      <span class="information-domains">
+                        <span class="badge badge-light" ng-repeat="infoDomain in searchResult.definedBy.classifications">
+                            {{$ctrl.showItemValue(infoDomain.label)}}
+                        </span>
+                      </span>  
+                    </div>
+                  </td>
+                  <td>
+                    <highlight text="searchResult.comment" context="$ctrl.model" search="$ctrl.searchText"></highlight>
+                  </td>
+                  <!-- <td>
+                    {{searchResult.}}
+                  </td> -->
+                  <td>
+                    {{$ctrl.showItemValue(searchResult.modifiedAt)}}
+                  </td>
+                  <td>
+
+                  </td>
+                <tr>
+
+              </tbody>
+            </table>
+
+          </div>
         </div>
-
+      </div>
     </div>
   </div>
 
