Add popup title that tells the reason why class is disabled

--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -132,6 +132,7 @@
                     id="{{$ctrl.generateSearchResultID(searchResult)}}"
                     ng-class="['search-result', {active: $ctrl.isSelected(searchResult), disabled: $ctrl.isDisabled(searchResult)} ]"
                     ng-click="$ctrl.selectItem(searchResult)"
+                    title="{{$ctrl.itemTitle(searchResult)}}"
                     key-control-selection>
 
                   <td>
