YTI-381 Table modal for search and add predicate
Not complete yet.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -233,6 +233,9 @@ visualization-view ajax-loading-indicator {
       &.add-new {
         background-color: lighten($primary, 52%);
       }
+      .glyph-icon {
+        color: $primary;
+      }
     }
   }
 }
