--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -183,6 +183,8 @@
 <div translate>Create new predicate</div>
 <div translate>Create new attribute</div>
 <div translate>Create new association</div>
+<div translate>New attribute</div>
+<div translate>New association</div>
 <div translate>by referencing external uri</div>
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
