--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -185,6 +185,12 @@
 <div translate>Create new association</div>
 <div translate>New attribute</div>
 <div translate>New association</div>
+<div translate>Copy attribute</div>
+<div translate>Copy association</div>
+<div translate>Create sub attribute</div>
+<div translate>Create sub association</div>
+<div translate>Create super attribute</div>
+<div translate>Create super association</div>
 <div translate>by referencing external uri</div>
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
