--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -980,3 +980,11 @@ body.visualization-maximized {
 .tool-info {
   width: calc(100% - 200px);
 }
+
+.sort-by-selected {
+  font-weight: bold;
+}
+
+.primary-color-item {
+  color: $primary;
+}
